hphp/hack/test/typecheck/async_function_untyped2.php.exp
WARN: File "async_function_untyped2.php", line 11, characters 7-12:
Invalid condition: a value of type `Awaitable<_>` will always be truthy (Warn[12006])
ERROR: File "async_function_untyped2.php", line 4, characters 32-32:
Was expecting a return type hint (Typing[4030])
ERROR: File "async_function_untyped2.php", line 11, characters 7-12:
This expression is of type `Awaitable`, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
  File "async_function_untyped2.php", line 4, characters 32-32:
  This is why I think it is `Awaitable`
